--- a/static/style.css
+++ b/static/style.css
@@ -4,8 +4,9 @@ body {
     color: #004a80;
     text-align: center;
     padding-top: 50px;
-    /* height: 100vh; */
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    /* overflow: hidden; */
 }
 
 form {
@@ -361,6 +362,7 @@ input[type="submit"]:hover {
     border: none; /* Menghilangkan border */
     cursor: pointer; /* Mengubah cursor menjadi pointer saat mouse over */
     border-radius: 5px; /* Melengkungkan sudut tombol */
+    margin-top: 5px;
 }
 
 .update-button:hover {
@@ -421,10 +423,6 @@ th {
     margin-bottom: 5vh;
 }
 
-.navigation-bar ul {
-    padding: 0px;
-    margin: 0px;
-    text-align: center;
-    display:inline-block;
-    vertical-align:top;
-  }
+.title {
+    margin: 10px;
+}
