--- a/templates/deleteappointment.html
+++ b/templates/deleteappointment.html
@@ -19,7 +19,7 @@
     </div>
 
     {% if appointments_list %}
-    <h3>Appointment Found:</h3>
+    <h3 class="title">Appointment Found:</h3>
     <table>
         <tr>
             <th>Appoinment ID</th>
@@ -37,7 +37,7 @@
             <td>{{ appointment.date }}</td>
             <td>{{ appointment.diagnosis }}</td>
             <td>
-                <button onclick="confirmDelete('{{ appointment.appointment_id }}', '{{ appointment.doctor_name }}', '{{ appointment.date }}')" class="update-button">Update</button>
+                <button onclick="confirmDelete('{{ appointment.appointment_id }}', '{{ appointment.doctor_name }}', '{{ appointment.date }}')" class="delete-button">Delete</button>
             </td>
         </tr>
         {% endfor %}
